<resources>
    <string name="app_name">BeforeSpoiled</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="photo_name">my_phone.jpg</string>
    <string name="save_message">Saved</string>
    <string-array name="CategorySpinner">
        <item>Vegetables</item>
        <item>Fruit</item>
        <item>Bread&amp;Pastries</item>
        <item>Milk&amp;Cheese</item>
        <item>Spices</item>
        <item>Frozen Food</item>
        <item>Grain</item>
        <item>Snacks</item>
        <item>Beverage</item>
        <item>Other</item>
    </string-array>


    <!-- Reminder -->
    <string name="reminder_button_manual">Add from manual</string>
    <string name="reminder_button_history">Add from history</string>
    <string name="reminder_button_delete">Delete Out-of-Date food</string>

    <!-- Shoppinglist -->
    <string name="finish_shopping">Finish Shopping</string>

    <!-- Settings -->
    <string name="settings_days_before_spoiled">Days Before Spoiled</string>
    <string name="preference_days_before_spoiled">days_before_spoiled</string>
    <string name="settings_labels">Labels Setting</string>
    <string name="title_activity_labels_setting">LabelsSettingActivity</string>
    <string name="settings_shoppinglist_template">ShoppingList Template</string>

    <!-- Single Label -->
    <string name="settings_labels_single_name">Name</string>
    <string name="settings_labels_single_period">Storage Period</string>
    <string name="settings_labels_single_days">Days Before Spoiled</string>
    <string name="title_activity_add_from_history">AddFromHistoryActivity</string>

    <!-- Finish Upload Button -->
    <string name="btn_idle">Finish Shopping</string>
    <string name="btn_in_progress">In Progress</string>
    <string name="btn_complete">Complete</string>
    <string name="btn_error">No Selection</string>

    <!-- Template -->
    <string name="collapsed">collapsed: %s</string>
    <string name="expanded">expanded: %s</string>

    <!-- AddFromHistory -->
    <string name="reminder_history_title">Shopping History</string>
</resources>
