<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:minWidth="800dp"
    android:orientation="horizontal"
    android:background="#F5F5F5"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context="cs165.edu.dartmouth.cs.beforespoiled.SingleLabelFragment">

    <ImageView
        android:id="@+id/iv_settings_labels_single_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/vege" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_item_name"
            android:textSize="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_labels_single_name" />

        <EditText
            android:id="@+id/et_settings_labels_single_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/add_item_storage"
            android:textSize="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_labels_single_period" />

        <EditText
            android:id="@+id/et_settings_labels_single_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/add_item_day"
            android:textSize="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_labels_single_days" />

        <EditText
            android:id="@+id/et_settings_labels_single_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_settings_labels_single_save"
                android:layout_width="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                fancy:fb_defaultColor="#0099CC"
                fancy:fb_focusColor="#2e5071"
                fancy:fb_textColor="#ffffff"
                fancy:fb_fontIconSize="30sp"
                fancy:fb_radius="8dp"
                fancy:fb_text="SAVE" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_settings_labels_single_cancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                fancy:fb_defaultColor="#0099CC"
                fancy:fb_focusColor="#2e5071"
                fancy:fb_textColor="#ffffff"
                fancy:fb_fontIconSize="30sp"
                fancy:fb_radius="8dp"
                fancy:fb_text="CANCEL" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

